# zotmcp

./: .gitignore  CHANGELOG.md  LAN_CLIENT_SETUP.md  LICENSE  README.md  SERVER_AUTOSTART_GUIDE.md  TODO.md  autostart-zotmcp.bat  create-autostart-task.bat  pyproject.toml  pytest.ini  run-zotmcp-http.bat  start-server.bat
skills/zotero/: SKILL.md
skills/zotero/references/: tools.md
src/zotmcp/: __init__.py  __main__.py  cli.py  clients.py  config.py  crossref.py  iterators.py  monitor.py  pdf_utils.py  pool.py  semantic.py  server.py  timeout.py  transport.py  utils.py
src/zotmcp/tools/: __init__.py  collections.py  export.py  items.py  metrics.py  notes.py  pdf.py  search.py  tags.py
tests/integration/: test_backends.py  test_http_transport.py
tests/safety/: test_resource_safety.py
tests/unit/: test_iterators.py  test_pool.py  test_semantic.py  test_timeout.py
